basic block explorer

--- a/www/explorer/views/index.ejs
+++ b/www/explorer/views/index.ejs
@@ -27,6 +27,10 @@
 	a.bare {
 		text-decoration: none;
 	}
+	th.data, td.data {
+		padding-left: 5px;
+		padding-right: 5px;
+	}
 	table.data, th.data, td.data {
 		border: 1px solid gray;
 	}
