--- a/www/explorer/views/block.ejs
+++ b/www/explorer/views/block.ejs
@@ -1,42 +1,42 @@
 
-<h3>Block | <%= block.height %> | <%= block.hash %></h3>
+<h3>Block | <span class="font-monospace"><%= block.height %></span></h3>
 
-<table class="data">
+<table class="table table-nonfluid mb-5">
 <tr>
-<td class="data"><b>Hash</b></td>
-<td class="data"><%= block.hash %></td>
+<td><b>Hash</b></td>
+<td class="font-monospace"><%= block.hash %></td>
 </tr>
 <tr>
-<td class="data"><b>Previous</b></td>
-<td class="data"><a href="block?hash=<%= block.prev %>"><%= block.prev %></a></td>
+<td><b>Previous</b></td>
+<td class="font-monospace"><a href="block?hash=<%= block.prev %>"><%= block.prev %></a></td>
 </tr>
 <tr>
-<td class="data"><b>Height</b></td>
-<td class="data"><%= block.height %></td>
+<td><b>Height</b></td>
+<td class="font-monospace"><%= block.height %></td>
 </tr>
 <tr>
-<td class="data"><b>Next</b></td>
-<td class="data"><a href="block?height=<%= block.height+1 %>"><%= block.height+1 %></a></td>
+<td><b>Next</b></td>
+<td class="font-monospace"><a href="block?height=<%= block.height+1 %>"><%= block.height+1 %></a></td>
 </tr>
 <tr>
-<td class="data"><b>K Size</b></td>
-<td class="data"><%= block.ksize %></td>
+<td><b>K Size</b></td>
+<td class="font-monospace"><%= block.ksize %></td>
 </tr>
 <tr>
-<td class="data"><b>Proof Score</b></td>
-<td class="data"><%= block.score %></td>
+<td><b>Proof Score</b></td>
+<td class="font-monospace"><%= block.score %></td>
 </tr>
 
 <% block.rewards.forEach(function(entry, index) { %>
 <tr>
-<td class="data"><b>Reward[<%= index %>]</b></td>
-<td class="data"><%= entry.amount %> | <a href="address?addr=<%= entry.address %>"><%= entry.address %></a></td>
+<td><b>Reward[<%= index %>]</b></td>
+<td class="font-monospace"><%= entry.amount %> | <a href="address?addr=<%= entry.address %>"><%= entry.address %></a></td>
 </tr>
 <% }); %>
 
 <tr>
-<td class="data"><b>Farmer Key</b></td>
-<td class="data"><%= block.farmer_key %></td>
+<td><b>Farmer Key</b></td>
+<td class="font-monospace"><%= block.farmer_key %></td>
 </tr>
 
 </table>
@@ -44,17 +44,17 @@
 
 <% block.tx_list.forEach(function(tx, index) { %>
 <p>
-<table class="data">
+<table class="table table-nonfluid">
 <tr>
-<td class="data"><b>TX[<%= index %>]</b></td>
-<td class="data" colspan=3><a href="transaction?id=<%= tx.id %>"><%= tx.id %></a></td>
+<td><b>TX[<%= index %>]</b></td>
+<td class="font-monospace" colspan=3><a href="transaction?id=<%= tx.id %>"><%= tx.id %></a></td>
 </tr>
 <% tx.outputs.forEach(function(output, index) { %>
 <tr>
-<td class="data">Output[<%= index %>]</td>
-<td class="data"><%= output.amount %></td>
-<td class="data">MMX</td>
-<td class="data"><a href="address?addr=<%= output.address %>"><%= output.address %></a></td>
+<td>Output[<%= index %>]</td>
+<td class="font-monospace"><%= output.amount %></td>
+<td>MMX</td>
+<td class="font-monospace"><a href="address?addr=<%= output.address %>"><%= output.address %></a></td>
 </tr>
 <% }); %>
 </table>
