--- a/www/explorer/views/transaction.ejs
+++ b/www/explorer/views/transaction.ejs
@@ -1,7 +1,7 @@
 
-<h3>TX | <span class="font-monospace"><%= tx.id %></span></h3>
+<h4>TX | <span class="font-monospace"><%= tx.id %></span></h4>
 
-<table class="table table-nonfluid mb-5">
+<table class="table table-nonfluid mt-3">
 <tr>
 <td><b>Input</b></td>
 <td class="font-monospace"><%= tx.input_amount %></td>
