--- a/www/explorer/views/block.ejs
+++ b/www/explorer/views/block.ejs
@@ -2,62 +2,55 @@
 <h4>Block | <span class="font-monospace"><%= block.height %></span></h4>
 
 <table class="table table-nonfluid mb-5">
+<tbody class="font-monospace">
 <tr>
 <td><b>Hash</b></td>
-<td class="font-monospace"><%= block.hash %></td>
+<td><%= block.hash %></td>
 </tr>
 <tr>
 <td><b>Previous</b></td>
-<td class="font-monospace"><a href="block?hash=<%= block.prev %>"><%= block.prev %></a></td>
+<td><a href="block?hash=<%= block.prev %>"><%= block.prev %></a></td>
 </tr>
 <tr>
 <td><b>Height</b></td>
-<td class="font-monospace"><%= block.height %></td>
+<td><%= block.height %></td>
 </tr>
 <tr>
 <td><b>Next</b></td>
-<td class="font-monospace"><a href="block?height=<%= block.height+1 %>"><%= block.height+1 %></a></td>
+<td><a href="block?height=<%= block.height+1 %>"><%= block.height+1 %></a></td>
 </tr>
 <tr>
 <td><b>K Size</b></td>
-<td class="font-monospace"><%= block.ksize %></td>
+<td><%= block.ksize %></td>
 </tr>
 <tr>
 <td><b>Proof Score</b></td>
-<td class="font-monospace"><%= block.score %></td>
+<td><%= block.score %></td>
 </tr>
 
 <% block.rewards.forEach(function(entry, index) { %>
 <tr>
 <td><b>Reward[<%= index %>]</b></td>
-<td class="font-monospace"><%= entry.amount %> | <a href="address?addr=<%= entry.address %>"><%= entry.address %></a></td>
+<td><%= entry.amount %> | <a href="address?addr=<%= entry.address %>"><%= entry.address %></a></td>
 </tr>
 <% }); %>
 
 <tr>
 <td><b>Farmer Key</b></td>
-<td class="font-monospace"><%= block.farmer_key %></td>
+<td><%= block.farmer_key %></td>
 </tr>
-
+</tbody>
 </table>
 
 
 <% block.tx_list.forEach(function(tx, index) { %>
-<p>
 <table class="table table-nonfluid">
+<tbody class="font-monospace">
 <tr>
 <td><b>TX[<%= index %>]</b></td>
-<td class="font-monospace" colspan=3><a href="transaction?id=<%= tx.id %>"><%= tx.id %></a></td>
+<td><a href="transaction?id=<%= tx.id %>"><%= tx.id %></a></td>
 </tr>
-<% tx.outputs.forEach(function(output, index) { %>
-<tr>
-<td>Output[<%= index %>]</td>
-<td class="font-monospace"><%= output.amount %></td>
-<td>MMX</td>
-<td class="font-monospace"><a href="address?addr=<%= output.address %>"><%= output.address %></a></td>
-</tr>
-<% }); %>
+</tbody>
 </table>
-</p>
 <% }); %>
 
