--- a/www/explorer/views/transaction.ejs
+++ b/www/explorer/views/transaction.ejs
@@ -2,54 +2,71 @@
 <h4>TX | <span class="font-monospace"><%= tx.id %></span></h4>
 
 <table class="table table-nonfluid mt-3">
+<tbody class="font-monospace">
 <tr>
 <td><b>Input</b></td>
-<td class="font-monospace"><%= tx.input_amount %></td>
+<td><%= tx.input_amount %></td>
 <td>MMX</td>
 </tr>
 <tr>
 <td><b>Output</b></td>
-<td class="font-monospace"><%= tx.output_amount %></td>
+<td><%= tx.output_amount %></td>
 <td>MMX</td>
 </tr>
 <tr>
 <td><b>Fee</b></td>
-<td class="font-monospace"><%= tx.fee_amount %></td>
+<td><%= tx.fee_amount %></td>
 <td>MMX</td>
 </tr>
+</tbody>
 </table>
 
-<p>
 <table class="table table-nonfluid">
+<thead>
 <tr>
 <th></th>
 <th>Amount</th>
-<th>Token</th>
+<th>Currency</th>
 <th>Address</th>
-<th>Spent TX</th>
+<th></th>
 </tr>
+</thead>
+<tbody class="font-monospace">
 
 <% tx.inputs.forEach(function(input, index) { %>
 <tr>
 <td><b>Input[<%= index %>]</b></td>
-<td class="font-monospace"><%= input.amount %></td>
-<td>MMX</td>
-<td class="font-monospace"><a href="address?addr=<%= input.address %>"><%= input.address %></a></td>
+<td><%= input.amount %></td>
+<td>
+<% if(input.contract) { %>
+<a href="/address?addr=<%= input.contract %>"><%= input.currency %></a>
+<% } else { %>
+<%= input.currency %>
+<% } %>
+</td>
+<td><a href="address?addr=<%= input.address %>"><%= input.address %></a></td>
+<td><a href="transaction?id=<%= input.prev.txid %>">Prev</a></td>
 </tr>
 <% }); %>
 
 <% tx.outputs.forEach(function(output, index) { %>
 <tr>
 <td><b>Output[<%= index %>]</b></td>
-<td class="font-monospace"><%= output.amount %></td>
-<td>MMX</td>
-<td class="font-monospace"><a href="address?addr=<%= output.address %>"><%= output.address %></a></td>
-<% if(output.spent_txid) { %>
-<td class="font-monospace"><a href="transaction?id=<%= output.spent_txid %>"><%= output.spent_txid %></a></td>
+<td><%= output.amount %></td>
+<td>
+<% if(output.contract) { %>
+<a href="/address?addr=<%= output.contract %>"><%= output.currency %></a>
+<% } else { %>
+<%= output.currency %>
+<% } %>
+</td>
+<td><a href="address?addr=<%= output.address %>"><%= output.address %></a></td>
+<% if(output.spent) { %>
+<td><a href="transaction?id=<%= output.spent.txid %>">Next</a></td>
 <% } %>
 </tr>
 <% }); %>
+</tbody>
 </table>
-</p>
 
 
