--- a/www/explorer/views/address.ejs
+++ b/www/explorer/views/address.ejs
@@ -1,7 +1,7 @@
 
 <h4>Address | <span class="font-monospace"><%= address %></span></h4>
 
-<table class="table">
+<table class="table table-nonfluid">
 <thead>
 <tr>
 <th>Balance</th>
