--- a/www/explorer/views/index.ejs
+++ b/www/explorer/views/index.ejs
@@ -48,7 +48,8 @@
 
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
 	<div class="container">
-		<a class="navbar-brand" href="/recent">Recent Blocks</a>
+		<a class="navbar-brand" href="/recent">Blocks</a>
+		<a class="navbar-brand" href="/transactions">Transactions</a>
 
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
